# kbase-chat-assistant

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml
.github/workflows/: pytest.yml
KBaseChatAssistant/assistant/: mistral_mrkl_bot.py  mrkl_bot.py
kbase-chat-assistant/assistant/: llama2_mrkl_bot.py  mrkl_bot.py
kbase-chat-assistant/embeddings/HFvector_db_app_catalog/: chroma.sqlite3
kbase-chat-assistant/models/: mistral.py
kbase-chat-assistant/tools/: ragchain.py
kbasechatassistant/assistant/: chatbot.py  llama3_mrkl_bot.py  mistral_mrkl_bot.py  mrkl_bot.py  mrkl_bot_cborg.py  prompts.py  vision_bot_cborg.py
kbasechatassistant/embeddings/: embeddings.py
kbasechatassistant/embeddings/HF_tutorials_db/fde974b0-1bd7-4221-adb3-40301c864646/: index_metadata.pickle
kbasechatassistant/embeddings/HFvector_db_kbase_docs/: chroma.sqlite3
kbasechatassistant/embeddings/vector_db_tutorials/: chroma-collections.parquet
kbasechatassistant/embeddings/vector_db_tutorials/4b14c7d4-cbc6-4789-9415-1d05765eda70/: index_metadata.pickle
kbasechatassistant/embeddings/vector_db_tutorials/index/: id_to_uuid_06f8eafd-df1e-4ab6-8a91-171660fd44a0.pkl  (+2 more)
kbasechatassistant/models/: CustomMistral.py  language_model.py  llama2.py
kbasechatassistant/tools/: information_tool.py  kgtool_cosine_sim.py  ragchain.py
kbasechatassistant/user_interface/: app.py
kbasechatassistant/util/: neo4j_config.py  semantic.py
tests/: test_integration.py  test_llama3_mrkl_bot.py  test_mistral_mrkl_bot.py  test_mrkl_bot.py  test_mrkl_bot_cborg.py
tests/user_interface/: test_app.py
