[tool.poetry]
name = "kbasechatassistant"
version = "0.1.0"
description = ""
authors = ["Prachi Gupta <prachigta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
chromadb = "^0.4.24"
transformers = "^4.39.3"
pytest = "^8.1.1"
tiktoken = "^0.6.0"
accelerate = "^0.29.3"
langchain-openai = "^0.1.3"
sentence-transformers = "^2.7.0"
langchainhub = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
