[tool.poetry]
name = "kbasechatassistant"
version = "0.1.0"
description = ""
authors = ["Prachi Gupta <prachigta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.14"
chromadb = "^0.4.24"
transformers = "^4.39.3"
pytest = "^8.1.1"
tiktoken = "^0.8.0"
accelerate = "^0.29.3"
langchain-openai = "^0.3.0"
sentence-transformers = "^2.7.0"
langchainhub = "^0.1.15"
neo4j = "^5.20.0"
streamlit = "^1.34.0"
jq = "^1.7.0"
langchain-anthropic = "0.3.1"
langchain-community = "0.3.14"
langchain-core = "0.3.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
